# duperscooper

./: .claude-state.md  .gitattributes  .gitignore  .markdownlintignore  ALBUM-TEST-SCENARIOS.md  CLAUDE-GUI-DUAL-PANE-PLAN.md  CLAUDE-GUI-PLANS.md  CLAUDE-HISTORICAL-PLANS.md  CLAUDE.md  GUI.md  LICENSE  README.md  TESTING-VARYING-SIMILARITY.md  activity-log.txt  analyze_group5_actual.py  benchmark_direct_fpcalc.sh  console.log.txt  debug-output.txt  install-completion.sh  migrate_disc_metadata.py  profile_fingerprinting.py  pyproject.toml  requirements-gui.txt  requirements-runtime.txt  requirements.txt  scan-results.json  scan-results.migrated.json  test_fpcalc_lengths.py  test_fpcalc_timing.py  test_group5_bug.py  test_hasher_performance.py  test_parallel_fingerprinting.py  test_pyacoustid.py  uninstall-completion.sh
docs/: rules-examples.yaml
scripts/: create-varying-similarity-albums.sh  generate-test-audio.sh
src/duperscooper/: __init__.py  __main__.py  album.py  apply.py  cache.py  finder.py  hasher.py  rules.py  staging.py
src/duperscooper_gui/: __init__.py  __main__.py
src/duperscooper_gui/config/: __init__.py  (+1 more)
test-albums/: README.md
test-albums-synthetic/: README.md
test-albums-synthetic/AlbumA-FLAC-Full-Metadata/: 01 - Track 1.flac  02 - Track 2.flac  03 - Track 3.flac
test-albums-synthetic/AlbumA-FLAC-Untagged/: track02.flac  track03.flac
test-audio/: README.md  track1.flac  track2.flac  track3.flac
test-audio-synthetic/: track1.flac  track2.flac  track3.flac
tests/: __init__.py  test_apply.py  test_cache.py  test_finder.py  test_rules.py
(+34 files in other folders)
